--- a/content/галерея-0.html
+++ b/content/галерея-0.html
@@ -12,7 +12,7 @@
   xmlns:xsd="http://www.w3.org/2001/XMLSchema#"
   xmlns:schema="http://schema.org/">
 
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head profile="http://www.w3.org/1999/xhtml/vocab">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="shortcut icon" href="../sites/all/themes/untitled/favicon.ico" type="image/vnd.microsoft.icon" />
