--- a/content/галерея-0.html
+++ b/content/галерея-0.html
@@ -170,9 +170,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
                 <div class="art-postcontent art-postcontent-0 clearfix"><div class="art-article">
     <div class="field field-name-media-gallery-media field-type-media field-label-hidden clearfix media-gallery-media mg-col mg-col-5 media-gallery-view-full"><div class="field-items"><div class="field-item even" id="media-gallery-media-0"><div class="media-gallery-media-item-thumbnail media-gallery-media-item-thumbnail-image media-gallery-item-wrapper">
       
-  <div class="media-gallery-item"><div class="top"><div class="top-inset-1"><div class="top-inset-2"></div></div></div><div class="gallery-thumb-outer"><div class="gallery-thumb-inner"><a href="https://github.com/Dailii/uslugi-lor/blob/main/sites/default/files/styles/media_gallery_thumbnail/public/_DSC16905c0e.jpg?raw=true
-" class="media-gallery-thumb cbEnabled"><img typeof="foaf:Image" src="https://github.com/Dailii/uslugi-lor/blob/main/sites/default/files/styles/media_gallery_thumbnail/public/_DSC16905c0e.jpg?raw=true
-?itok=T4HFnE9q" width="450" height="450"   title="Посмотреть крупнее" alt="Посмотреть крупнее" /></a></div></div><div class="bottom"><div class="bottom-inset-1"><div class="bottom-inset-2"></div></div></div></div>
+  <div class="media-gallery-item"><div class="top"><div class="top-inset-1"><div class="top-inset-2"></div></div></div><div class="gallery-thumb-outer"><div class="gallery-thumb-inner"><a href="https://lorplus.ru/media-gallery/detail/36/11" class="media-gallery-thumb cbEnabled"><img typeof="foaf:Image" src="../sites/default/files/styles/media_gallery_thumbnail/public/_DSC16905c0e.jpg?itok=T4HFnE9q" width="450" height="450"   title="Посмотреть крупнее" alt="Посмотреть крупнее" /></a></div></div><div class="bottom"><div class="bottom-inset-1"><div class="bottom-inset-2"></div></div></div></div>
   </div>
 </div><div class="field-item odd" id="media-gallery-media-1"><div class="media-gallery-media-item-thumbnail media-gallery-media-item-thumbnail-image media-gallery-item-wrapper">
       
