--- a/content/галерея-1.html
+++ b/content/галерея-1.html
@@ -336,7 +336,7 @@ alexlymarev@mail.ru</p>
 </div>
 
 	<p class="art-page-footer">
-        <span id="art-footnote-links"> <a target="_blank" href="https://webvesta.ru/">Создание и продвижение сайтов | Веб-студия "Веста"</a></span>
+        <span id="art-footnote-links"> <a target="_blank" href="">Создание и продвижение сайтов | Веб-студия "Веста"</a></span>
     </p>
 	
 </footer>
