--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans&amp;subset=latin" />
 
-
+<meta name="yandex-verification" content="eaa5f5da60edbbc8" />
 
 </head>
 <body class="html front not-logged-in no-sidebars page-node page-node- page-node-11" >
