--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ alexlymarev@mail.ru</p>
 <p>Режим работы:<br />
 Пн-пт: 9.30 - 18.00<br />
 Сб: 10.00 - 14.00<br />
-Вс: выходной  />
+Вс: выходной<br />
 <!-- Yandex.Metrika informer -->
 <a href="https://metrika.yandex.ru/stat/?id=88753253&amp;from=informer"
 target="_blank" rel="nofollow"><img src="https://informer.yandex.ru/informer/88753253/1_0_FF8686FF_FF6666FF_0_pageviews"
