--- a/uslugi.html
+++ b/uslugi.html
@@ -280,7 +280,28 @@ alexlymarev@mail.ru</p>
 <p>Режим работы:<br />
 Пн-пт: 9.30 - 18.00<br />
 Сб: 10.00 - 14.00<br />
-Вс: выходной</p>
+Вс: выходной<br />
+<!-- Yandex.Metrika informer -->
+<a href="https://metrika.yandex.ru/stat/?id=88753253&amp;from=informer"
+target="_blank" rel="nofollow"><img src="https://informer.yandex.ru/informer/88753253/1_0_FF8686FF_FF6666FF_0_pageviews"
+style="width:80px; height:15px; border:0;" alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры)" class="ym-advanced-informer" data-cid="88753253" data-lang="ru" /></a>
+<!-- /Yandex.Metrika informer -->
+
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(88753253, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/88753253" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter --> </p>
 
 </div>
 
