--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans&amp;subset=latin" />
 
 <!--3a9f6b4e--> <!--3a9f6b4e-->	
+<!-- SAPE RTB JS -->
+<script
+    async="async"
+    src="https://cdn-rtb.sape.ru/rtb-b/js/312/2/132312.js"
+    type="text/javascript">
+</script>
+<!-- SAPE RTB END -->	
+	
 	
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
