--- a/index.html
+++ b/index.html
@@ -306,6 +306,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 <p class="rtejustify">Пн-пт: 9.30 до 18.00, в субботу с 10.00 до 14.00, воскресенье - выходной</p>
 <p class="rtejustify">Адрес: г. Оренбург, мкр-н 70 лет ВЛКСМ, дом 27, офис 3, тел. 44-15-12</p>
 <p class="rtejustify">Проезд автобусами № 52, 58, 63, 45, газель № 3, до остановки МЖК</p>
+<!--s_links--><!--check code--><!--/s_links-->			
 </div>
 </div></div>
   </div>
