--- a/uslugi.html
+++ b/uslugi.html
@@ -194,7 +194,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 
   
   <div class="field field-name-field-img-serv field-type-image field-label-hidden"><div class="field-items"><div class="field-item even" rel="" resource="sites/default/files/styles/services/public/720499f4-3c2a-423f-8292-4267380f14036c8e.jpg?itok=R9vJRICo"><a href="uslugi/%d0%bf%d1%80%d0%b8%d0%b5%d0%bc%d1%8b-%d0%b2%d1%80%d0%b0%d1%87%d0%b5%d0%b9-%d1%80%d0%b0%d0%b7%d0%bb%d0%b8%d1%87%d0%bd%d1%8b%d1%85-%d1%81%d0%bf%d0%b5%d1%86%d0%b8%d0%b0%d0%bb%d1%8c%d0%bd%d0%be%d1%81%d1%82%d0%b5%d0%b9.html"><img typeof="foaf:Image" src="sites/default/files/styles/services/public/720499f4-3c2a-423f-8292-4267380f14036c8e.jpg?itok=R9vJRICo" width="218" height="218" alt="" /></a></div></div></div><div class="field field-name-title field-type-ds field-label-hidden"><div class="field-items"><div class="field-item even" property="dc:title"><h4> Приемы врачей</h4></div></div></div><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p>В медицинском центре «ЛОР-плюс» ведут прием врачи таких специальностей, как:</p></div></div></div><div class="field field-name-node-link field-type-ds field-label-hidden"><div class="field-items"><div class="field-item even"><a href="uslugi/%d0%bf%d1%80%d0%b8%d0%b5%d0%bc%d1%8b-%d0%b2%d1%80%d0%b0%d1%87%d0%b5%d0%b9-%d1%80%d0%b0%d0%b7%d0%bb%d0%b8%d1%87%d0%bd%d1%8b%d1%85-%d1%81%d0%bf%d0%b5%d1%86%d0%b8%d0%b0%d0%bb%d1%8c%d0%bd%d0%be%d1%81%d1%82%d0%b5%d0%b9.html" class="">Подробнее...</a></div></div></div></div>
-
+<!--s_links--><!--check code--><!--/s_links-->
   </div>
     </div>
   
