--- a/content/слуховые-аппараты.html
+++ b/content/слуховые-аппараты.html
@@ -197,6 +197,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 <li class="rtejustify">Врнутриушные;</li>
 <li class="rtejustify">Внутриканальные;</li>
 <li class="rtejustify">Открытого типа.</li>
+	<!--s_links--><!--check code--><!--/s_links-->
 </ul><p class="rtejustify">Специалисты медицинского центра «ЛорПЛЮС» помогут вам с выбором оптимальной модели, как по цене, качеству, так и по функциональности.</p>
 </div></div></div><span property="dc:title" content="Слуховые аппараты в Оренбурге" class="rdf-meta element-hidden"></span>  </div>
 </div>
