--- a/content/график-приема.html
+++ b/content/график-приема.html
@@ -251,6 +251,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 </td>
 </tr></tbody></table></div>
 <p>Директор:   Лымарев Александр Викторович,  Эл. Адрес: <a href="mailto:alexlymarev@mail.ru">alexlymarev@mail.ru</a> телефон 8 (3532) 44-15-12</p>
+	    <!--s_links--><!--check code--><!--/s_links-->
 <p>Прием по личным вопросам: вторник, четверг с 16<sup>00</sup>-18<sup>00</sup>.</p>
 </div></div></div><span property="dc:title" content="График приема" class="rdf-meta element-hidden"></span>  </div>
 </div>
