--- a/content/документы.html
+++ b/content/документы.html
@@ -191,6 +191,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 <li>Адрес электронной почты:<a href="mailto:info@rosminzdrav.ru">info@rosminzdrav.ru</a></li>
 <li>Адрес: 127994, ГСП-4, г. Москва, Рахмановский пер, д. 3.</li>
 <li>Телефон для информирования о факте регистрации обращений граждан: 8 (495) 627-29-93.</li>
+	<!--s_links--><!--check code--><!--/s_links-->
 </ul><p><strong>Министерство здравоохранения Оренбургской области</strong></p>
 <ul><li>Руководитель: вице-губернатор – заместитель председателя Правительства Оренбургской области по социальной политике – министр здравоохранения Оренбургской области Татьяна Леонидовна Савинова.</li>
 <li>Телефон справочной службы: 8 (3532) 77-45-19 (отдел по организации приёма граждан и рассмотрению обращений граждан).</li>
