--- a/content/наши-специалисты.html
+++ b/content/наши-специалисты.html
@@ -232,6 +232,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 
   <div class="group-right">
     <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p>Медицинская сестра</p>
+	    <!--s_links--><!--check code--><!--/s_links-->
 <p>Окончила средне-специальное образование ГАПОУ ООМК по специальности «Сестринское дело».  Сертификат специалиста для осуществления медицинской деятельности по специальности «медицинская сестра» от 29.01.2017 г.</p>
 </div></div></div>  </div>
 
