--- a/content/цены-на-услуги.html
+++ b/content/цены-на-услуги.html
@@ -306,6 +306,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 </tr><tr><td class="rtecenter">3</td>
 <td>Лечение на аппарате «Тонзиллор – MM» (1 сеанс)</td>
 <td class="rtecenter">500</td>
+	<!--s_links--><!--check code--><!--/s_links-->
 </tr></tbody></table><p> </p>
 </div></div></div><span property="dc:title" content="Цены на услуги" class="rdf-meta element-hidden"></span>  </div>
 </div>
