--- a/content/контакты.html
+++ b/content/контакты.html
@@ -177,6 +177,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 <p>Мы в инстаграм: <a class="insta-button" target="_blank" href="https://www.instagram.com/lor_plus"><img style="display: inline-block; vertical-align: middle; margin-left: 10px" typeof="foaf:Image" src="../sites/default/files/insta-button.png" alt="" width="23" height="23"></a></p>
 
 <p><span style="font-family:latobold">Проезд автобусами</span> № 52, 58, 63, 45,</p>
+	    <!--s_links--><!--check code--><!--/s_links-->
 
 <p><span style="font-family:latobold">Газель</span> № 3, до остановки <span style="font-family:latobold">МЖК</span></p>
 
