--- a/content/отзывы.html
+++ b/content/отзывы.html
@@ -262,7 +262,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
   
   <div class="field field-name-title field-type-ds field-label-hidden"><div class="field-items"><div class="field-item even" property="dc:title"><h4>Лидия</h4></div></div></div><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p>Я очень рада, что моим лечением занимался Лымарев Виктор Евгеньевич. Он подробно расписал для меня индивидуальную программу лечения, которая со временем принисла свои плоды и я выздоровела! Грамотный и компетентный врач.</p>
 </div></div></div></div>
-
+<!--s_links--><!--check code--><!--/s_links-->
   </div>
     </div>
   
