--- a/content/галерея-0.html
+++ b/content/галерея-0.html
@@ -242,6 +242,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
   </div>
 </div></div></div><span property="dc:title" content="Галерея" class="rdf-meta element-hidden"></span>  </div>
 </div>
+		<!--s_links--><!--check code--><!--/s_links-->
 
 
 </article>	</div>
